--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="https://www.linkedin.com/mwlite/in/musharraf-khan-ab6220248" target="_blank"><i class=' bx bxl-linkedin' ></i></a>
         </div>
         <div class="home-img">
-            <img src='image/img1.jpg' alt="homeImg">
+            <img src='./img1.jpg' alt="homeImg">
         </div>
         <div class="home-text">
             <span>Hello, I'm</span>
@@ -59,7 +59,7 @@
         <!-- About Content -->
         <div class="about-container">
             <div class="about-img">
-                <img src="./image/img2.jpg" alt="aboutImg">
+                <img src="./img2.jpg" alt="aboutImg">
             </div>
             <div class="about-text">
                 <p>I'm a Front-End Developer in Indore, India.
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="skills-img">
-                <img src="image/123.png" alt="">
+                <img src="./123.png" alt="">
             </div>
         </div>
 
@@ -172,22 +172,22 @@
         </div>
         <div class="portfolio-content">
             <div class="portfolio-img">
-                <img src="image/blog-2.jpg" alt="1">
+                <img src="./blog-2.jpg" alt="1">
             </div>
             <div class="portfolio-img">
-                <img src="image/blog-3.jpg" alt="2">
+                <img src="./blog-3.jpg" alt="2">
             </div>
             <div class="portfolio-img">
-                <img src="image/blog-4.jpg" alt="3">
+                <img src="./blog-4.jpg" alt="3">
             </div>
             <div class="portfolio-img">
-                <img src="image/blog-5.jpg" alt="4">
+                <img src="./blog-5.jpg" alt="4">
             </div>
             <div class="portfolio-img">
-                <img src="image/blog-6.jpg" alt="5">
+                <img src="./blog-6.jpg" alt="5">
             </div>
             <div class="portfolio-img">
-                <img src="image/blog-7.jpg" alt="6">
+                <img src="./blog-7.jpg" alt="6">
             </div>
             
         </div>
