--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Responsive Portfolio Website</title>
     <!-- Link To CSS -->
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./style.css">
     <!-- Box Icons -->
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -44,7 +44,7 @@
         <div class="home-text">
             <span>Hello, I'm</span>
             <h1>Musharraf Khan</h1>
-            <h2>I am a Frontend Developer</h2>
+            <h2>I am a Frontend Web Developer</h2>
             <p>Working as a Freelancer with a great skills to design and devlops the fully responsive front end or user interface websites.<br>   For more?</p>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
@@ -62,10 +62,10 @@
                 <img src="./img2.jpg" alt="aboutImg">
             </div>
             <div class="about-text">
-                <p>I'm a Front-End Developer in Indore, India.
+                <p>I'm a Front-End Web Developer in Indore, India.
                     I have serious passion for UI effects, animations and creating intuitive, dynamic user experiences.
-                    I like making fun, interactive things with code. I also talk and write about those things.
-                    Let's make something special.</p>
+                    I like making fun, interactive things with code. I am very interested in this creative field.
+                    Being a Frontend Web Developer is one of my life goals and interests, With talent in this field, I want to always learn new things and strengthen every process.  Let's make something special.</p>
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
@@ -80,7 +80,7 @@
                     <!-- Box 3 -->
                     <div class="info-box">
                         <i class='bx bxs-envelope' ></i>
-                        <span>khanmusharraf@gmail.com</span>
+                        <span>khanmusharraf695@gmail.com</span>
                     </div>
                 </div>
                 <a href="My Resume.pdf" class="btn" target="_blank">View Resume</a>
@@ -119,7 +119,7 @@
                 </div>
                 <!-- Box 4 -->
                 <div class="bars-box">
-                    <h3>React</h3>
+                    <h3>React Js</h3>
                     <span>80%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
@@ -135,7 +135,7 @@
     <section class="services" id="services">
         <div class="heading">
             <h2>Services</h2>
-            <span>Our Services</span>
+            <span>MY Services</span>
         </div>
         <div class="services-content">
             <!-- Box 1 -->
@@ -168,7 +168,7 @@
     <section class="portfolio" id="portfolio">
         <div class="heading">
             <h2>Portfolio</h2>
-            <span>Our Recent Work</span>
+            <span>My Recent Work</span>
         </div>
         <div class="portfolio-content">
             <div class="portfolio-img">
@@ -220,13 +220,13 @@
     </div>
     <!-- Copyright -->
     <div class="copyright">
-        <p>Created By <a href="">Mohd Musharraf khan</a> | All Right Reserved. thank you</p>
+        <p>Created By <a href="">Mohd Musharraf khan</a> | All Right Reserved. </p>
     </div>
  
  
  
     <!-- Link To JS -->
     <!-- <script src="./js/script.js"></script> -->
-    <script src="./js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
