--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio Website</title>
+    <title>Musharraf's Portfolio Website</title>
     <!-- Link To CSS -->
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
   <link rel="stylesheet" href="./style.css">
@@ -35,7 +35,7 @@
     <section class="home" id="home">
         <div class="social">
             <a href="https://github.com/im-musharraf" target="_blank"><i class='bx bxl-github'></i></a>
-            <a href="https://wa.me/qr/OF4ZMMRLXK23J1" target="_blank"><i class='bx bxl-whatsapp' ></i></a>
+            <a href="https://wa.me/qr/24EL77IQJE72G1" target="_blank"><i class='bx bxl-whatsapp' ></i></a>
             <a href="https://www.linkedin.com/mwlite/in/musharraf-khan-ab6220248" target="_blank"><i class=' bx bxl-linkedin' ></i></a>
         </div>
         <div class="home-img">
